--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 services:
   app:
-    image: python:3.13-slim
+    build: .
     volumes:
       - .:/app
-    working_dir: /app
-    command: sh -c "pip install fastapi 'uvicorn[standard]' websockets && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
       - "8000:8000"
